--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,51 @@
 /*  your css code here. If applicable */
+body {
+    background-color: rgb(204, 204, 204);
+    text-align: center;
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+ul {
+    padding: 0;
+}
+
+li {
+    list-style-type: none;
+    margin: 8px 0;
+}
+
+a {
+    text-decoration-line: none;
+    color: black;
+}
+
+#listcont {
+    width: 700px;
+    margin: 20px auto;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
+    padding: 20px;
+}
+
+#videocont {
+    width: 700px;
+    margin: 20px auto;
+    border-radius: 10px;
+    border: 2px solid black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+}
+
+.player_one,
+.player_two {
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 10px;
+}
+
